--- a/postgresql/pg_hba.conf
+++ b/postgresql/pg_hba.conf
@@ -125,4 +125,5 @@ local   replication     all                                     trust
 host    replication     all             127.0.0.1/32            trust
 host    replication     all             ::1/128                 trust
 # My settings
-host    postgres        postgres        192.168.1.0/24          scram-sha-256 
+host    postgres        postgres        192.168.1.0/24          scram-sha-256
+host    keycloak        keycloak        172.18.1.4/24           scram-sha-256
