Добавлен nginx healthcheck

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -27,5 +27,13 @@ http {
 
     #gzip  on;
 
+    server {
+        location = /health {
+            access_log off;
+            add_header 'Content-Type' 'application/json';
+            return 200 '{"status":"Healthy"}';
+        }
+    }
+
     include /etc/nginx/conf.d/*.conf;
 }
