--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,6 +15,10 @@ services:
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
       - ./nginx/conf.d:/etc/nginx/conf.d:ro
+    healthcheck:
+      test: [ "CMD-SHELL", "wget -O /dev/null http://127.0.0.1/health || exit 1" ]
+      timeout: 10s
+      start_period: 5s
     # ----------------------------------------------------
 
   postgres:
@@ -62,6 +66,8 @@ services:
     command: [ "start", "--optimized" ]
     depends_on:
       postgres:
+        condition: service_healthy
+      nginx:
         condition: service_healthy
 
 networks:
