--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,7 +7,7 @@ services:
       context: ./nginx
       dockerfile: ./Dockerfile
     networks:
-      net:
+      rlx_net:
         ipv4_address: 172.18.1.2
     ports:
       - "80:80/tcp"
@@ -25,7 +25,7 @@ services:
     container_name: rlx-postgres
     image: postgres:16.4-bookworm
     networks:
-      net:
+      rlx_net:
         ipv4_address: 172.18.1.3
     ports:
       - "5432:5432/tcp"
@@ -48,7 +48,7 @@ services:
       context: ./keycloak
       dockerfile: ./Dockerfile
     networks:
-      net:
+      rlx_net:
         ipv4_address: 172.18.1.4
     healthcheck:
       test: [ "CMD-SHELL", "exec 3<>/dev/tcp/127.0.0.1/9000;echo -e 'GET /health/ready HTTP/1.1\r host: http://localhost\r Connection: close\r \r ' >&3;if [ $? -eq 0 ]; then echo 'Healthcheck Successful';exit 0;else echo 'Healthcheck Failed';exit 1;fi;" ]
@@ -71,7 +71,8 @@ services:
         condition: service_healthy
 
 networks:
-  net:
+  rlx_net:
+    name: rlx_net
     ipam:
       config:
         - subnet: 172.18.1.0/24
