--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,13 +1,13 @@
-name: rlx
+name: dev
 
 services:
   nginx:
-    container_name: rlx-nginx
+    container_name: dev-nginx
     build:
       context: ./nginx
       dockerfile: ./Dockerfile
     networks:
-      rlx_net:
+      dev_net:
         ipv4_address: 172.18.1.2
     ports:
       - "80:80/tcp"
@@ -22,16 +22,16 @@ services:
     # ----------------------------------------------------
 
   postgres:
-    container_name: rlx-postgres
+    container_name: dev-postgres
     image: postgres:16.4-bookworm
     networks:
-      rlx_net:
+      dev_net:
         ipv4_address: 172.18.1.3
     ports:
       - "5432:5432/tcp"
     volumes:
       - pg_vol:/var/lib/postgresql/data:rw
-      - ./postgresql/pg_hba.conf:/var/lib/postgresql/data/pg_hba.conf:ro # Comment it at the first launch
+      - ./postgresql/pg_hba.conf:/var/lib/postgresql/data/pg_hba.conf:rw # Comment it at the first launch
     healthcheck:
       test: [ "CMD-SHELL", "pg_isready -d postgres -U postgres" ]
       interval: 30s
@@ -43,12 +43,12 @@ services:
       # ----------------------------------------------------
 
   keycloak:
-    container_name: rlx-keycloak
+    container_name: dev-keycloak
     build:
       context: ./keycloak
       dockerfile: ./Dockerfile
     networks:
-      rlx_net:
+      dev_net:
         ipv4_address: 172.18.1.4
     healthcheck:
       test: [ "CMD-SHELL", "exec 3<>/dev/tcp/127.0.0.1/9000;echo -e 'GET /health/ready HTTP/1.1\r host: http://localhost\r Connection: close\r \r ' >&3;if [ $? -eq 0 ]; then echo 'Healthcheck Successful';exit 0;else echo 'Healthcheck Failed';exit 1;fi;" ]
@@ -71,11 +71,12 @@ services:
         condition: service_healthy
 
 networks:
-  rlx_net:
-    name: rlx_net
+  dev_net:
+    name: dev_net
     ipam:
       config:
         - subnet: 172.18.1.0/24
 
 volumes:
   pg_vol:
+    name: dev_pg_vol
