--- a/nginx/conf.d/keycloak.conf
+++ b/nginx/conf.d/keycloak.conf
@@ -1,6 +1,9 @@
 server {
-    listen 80;
+    listen 443 ssl;
     server_name auth.vocab.rlx;
+
+    ssl_certificate /etc/ssl/vocab.rlx/MyCert.crt;
+    ssl_certificate_key /etc/ssl/vocab.rlx/MyPrivate.key;
 
     include kc_proxy_buffer_params;
     include proxy_params;
@@ -27,8 +30,11 @@ server {
 }
 
 server {
-    listen 80;
+    listen 443 ssl;
     server_name auth.rlx;
+
+    ssl_certificate /etc/ssl/vocab.rlx/MyCert.crt;
+    ssl_certificate_key /etc/ssl/vocab.rlx/MyPrivate.key;
 
     include kc_proxy_buffer_params;
     include proxy_params;
