--- a/nginx/conf.d/vocab.conf
+++ b/nginx/conf.d/vocab.conf
@@ -1,6 +1,9 @@
 server {
-    listen 80;
+    listen 443 ssl http2;
     server_name vocab.rlx;
+
+    ssl_certificate /etc/ssl/vocab.rlx/MyCert.crt;
+    ssl_certificate_key /etc/ssl/vocab.rlx/MyPrivate.key;
 
     include proxy_params;
     include kc_proxy_buffer_params;
@@ -25,8 +28,11 @@ server {
 }
 
 server {
-    listen 80;
+    listen 443 ssl http2;
     server_name api.vocab.rlx;
+
+    ssl_certificate /etc/ssl/vocab.rlx/MyCert.crt;
+    ssl_certificate_key /etc/ssl/vocab.rlx/MyPrivate.key;
 
     include proxy_params;
 
