добавлены редиректы на https

--- a/nginx/conf.d/keycloak.conf
+++ b/nginx/conf.d/keycloak.conf
@@ -1,9 +1,6 @@
 server {
-    listen 443 ssl;
+    listen 80;
     server_name auth.vocab.rlx;
-
-    ssl_certificate /etc/ssl/vocab.rlx/MyCert.crt;
-    ssl_certificate_key /etc/ssl/vocab.rlx/MyPrivate.key;
 
     include kc_proxy_buffer_params;
     include proxy_params;
@@ -30,11 +27,8 @@ server {
 }
 
 server {
-    listen 443 ssl;
+    listen 80;
     server_name auth.rlx;
-
-    ssl_certificate /etc/ssl/vocab.rlx/MyCert.crt;
-    ssl_certificate_key /etc/ssl/vocab.rlx/MyPrivate.key;
 
     include kc_proxy_buffer_params;
     include proxy_params;
