--- a/nginx/conf.d/vocab.frontend.conf
+++ b/nginx/conf.d/vocab.frontend.conf
@@ -1,5 +1,5 @@
 server {
-    listen 443 ssl http2;
+    listen 443 ssl;
     server_name vocab.rlx;
 
     ssl_certificate /etc/ssl/vocab.rlx/MyCert.crt;
@@ -28,27 +28,8 @@ server {
 }
 
 server {
-    listen 443 ssl http2;
-    server_name api.vocab.rlx;
+    listen 80;
+    server_name vocab.rlx;
 
-    ssl_certificate /etc/ssl/vocab.rlx/MyCert.crt;
-    ssl_certificate_key /etc/ssl/vocab.rlx/MyPrivate.key;
-
-    include proxy_params;
-
-    location /ws {
-        proxy_pass http://192.168.1.190:5000;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
-        proxy_read_timeout 320s;
-    }
-
-    location = / {
-        return 303 http://vocab.rlx;
-    }
-
-    location / { 
-        proxy_pass http://192.168.1.190:5000;
-    }
+    return 301 https://vocab.rlx$request_uri;
 }
