keycloak ssl hotfix

--- a/nginx/conf.d/keycloak.conf
+++ b/nginx/conf.d/keycloak.conf
@@ -1,6 +1,9 @@
 server {
-    listen 80;
+    listen 443 ssl;
     server_name auth.vocab.rlx;
+
+    ssl_certificate /etc/ssl/vocab.rlx/MyCert.crt;
+    ssl_certificate_key /etc/ssl/vocab.rlx/MyPrivate.key;
 
     include kc_proxy_buffer_params;
     include proxy_params;
@@ -24,6 +27,13 @@ server {
     location = / {
         return 303 http://vocab.rlx;
     }
+}
+
+server {
+    listen 80;
+    server_name auth.vocab.rlx;
+
+    return 301 https://auth.vocab.rlx$request_uri;
 }
 
 server {
