закоментировано все, что связано с ssl

--- a/nginx/conf.d/keycloak.conf
+++ b/nginx/conf.d/keycloak.conf
@@ -1,9 +1,10 @@
 server {
-    listen 443 ssl;
+    listen 80;
+    # listen 443 ssl;
     server_name auth.vocab.rlx;
 
-    ssl_certificate /etc/ssl/vocab.rlx/MyCert.crt;
-    ssl_certificate_key /etc/ssl/vocab.rlx/MyPrivate.key;
+    # ssl_certificate /etc/ssl/vocab.rlx/MyCert.crt;
+    # ssl_certificate_key /etc/ssl/vocab.rlx/MyPrivate.key;
 
     include kc_proxy_buffer_params;
     include proxy_params;
@@ -29,12 +30,12 @@ server {
     }
 }
 
-server {
-    listen 80;
-    server_name auth.vocab.rlx;
+# server {
+#     listen 80;
+#     server_name auth.vocab.rlx;
 
-    return 301 https://auth.vocab.rlx$request_uri;
-}
+#     return 301 https://auth.vocab.rlx$request_uri;
+# }
 
 server {
     listen 80;
