--- a/nginx/conf.d/vocab.frontend.conf
+++ b/nginx/conf.d/vocab.frontend.conf
@@ -1,9 +1,10 @@
 server {
-    listen 443 ssl;
+    listen 80;
+    # listen 443 ssl;
     server_name vocab.rlx;
 
-    ssl_certificate /etc/ssl/vocab.rlx/MyCert.crt;
-    ssl_certificate_key /etc/ssl/vocab.rlx/MyPrivate.key;
+    # ssl_certificate /etc/ssl/vocab.rlx/MyCert.crt;
+    # ssl_certificate_key /etc/ssl/vocab.rlx/MyPrivate.key;
 
     include proxy_params;
     include kc_proxy_buffer_params;
@@ -27,9 +28,9 @@ server {
     }
 }
 
-server {
-    listen 80;
-    server_name vocab.rlx;
+# server {
+#     listen 80;
+#     server_name vocab.rlx;
 
-    return 301 https://vocab.rlx$request_uri;
-}
+#     return 301 https://vocab.rlx$request_uri;
+# }
