--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,5 @@ POSTGRES_PASSWORD="secret"
 KC_DB_USERNAME="keycloak"
 KC_DB_PASSWORD="secret"
 KC_DB_URL="jdbc:postgresql://postgresql/keycloak"
+KC_BOOTSTRAP_ADMIN_USERNAME="admin"
+KC_BOOTSTRAP_ADMIN_PASSWORD="secret"
