--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,8 +1,19 @@
 name: dev
 
+networks:
+  dev_net:
+    name: dev_net
+    ipam:
+      config:
+        - subnet: 172.18.1.0/24
+volumes:
+  pg_vol:
+    name: dev_pg_vol
+
 services:
   nginx:
-    container_name: dev-nginx
+    image: nginx:local
+    container_name: nginx
     build:
       context: ./nginx
       dockerfile: ./Dockerfile
@@ -15,15 +26,15 @@ services:
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
       - ./nginx/conf.d:/etc/nginx/conf.d:ro
-      - ./ssl:/etc/ssl/vocab.rlx:ro
+      # - ./ssl:/etc/ssl/vocab.rlx:ro
     healthcheck:
       test: [ "CMD-SHELL", "wget -O /dev/null http://127.0.0.1/health || exit 1" ]
       timeout: 10s
       start_period: 5s
-    # ----------------------------------------------------
+    # --------------------------------------------------------------------------------------------------------
 
   postgres:
-    container_name: dev-postgres
+    container_name: postgres
     image: postgres:16.4-bookworm
     networks:
       dev_net:
@@ -41,16 +52,19 @@ services:
       start_period: 15s
     environment:
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-      # ----------------------------------------------------
+    # --------------------------------------------------------------------------------------------------------
 
   keycloak:
-    container_name: dev-keycloak
+    container_name: keycloak
+    image: keycloak:local
     build:
       context: ./keycloak
       dockerfile: ./Dockerfile
     networks:
       dev_net:
         ipv4_address: 172.18.1.4
+    ports:
+      - "8080:8080/tcp"
     healthcheck:
       test: [ "CMD-SHELL", "exec 3<>/dev/tcp/127.0.0.1/9000;echo -e 'GET /health/ready HTTP/1.1\r host: http://localhost\r Connection: close\r \r ' >&3;if [ $? -eq 0 ]; then echo 'Healthcheck Successful';exit 0;else echo 'Healthcheck Failed';exit 1;fi;" ]
       interval: 1m
@@ -64,20 +78,11 @@ services:
       - KC_PROXY_HEADERS=xforwarded
       - KC_HOSTNAME_STRICT=false
       - KC_HTTP_ENABLED=true
+      - KC_BOOTSTRAP_ADMIN_USERNAME=${KC_BOOTSTRAP_ADMIN_USERNAME}
+      - KC_BOOTSTRAP_ADMIN_PASSWORD=${KC_BOOTSTRAP_ADMIN_PASSWORD}
     command: [ "start", "--optimized" ]
     depends_on:
       postgres:
         condition: service_healthy
       nginx:
         condition: service_healthy
-
-networks:
-  dev_net:
-    name: dev_net
-    ipam:
-      config:
-        - subnet: 172.18.1.0/24
-
-volumes:
-  pg_vol:
-    name: dev_pg_vol
